--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.0.1",
     "@angular/router": "~10.0.1",
     "admin-lte": "3.0",
+    "alertifyjs": "^1.13.1",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
